--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="script.js"></script>
     <title>Sign-Up Project</title>
 </head>
 
@@ -19,51 +20,53 @@
         <span class="img-info">Photo by Hallie West on Unsplash</span>
     </section>
     <section class="sign-up">
-        <div class="text">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started. </p>
-            <p>You <em>know</em> you want to.</p>
+        <p>This is not a real online service! You know you need something <br>like this in your life to help you realize your deepest dreams. <br>Sign up <em>now</em> to get started.
+
+            <br> You <em>know</em> you want to.</p>
+        <div class="form-box">
+            <div class="form-info">
+                <span class="title">Let's do this!</span>
+                <form id="form" action="#">
+                    <div class="user-details">
+                        <div class="input-box">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" name="first-name" id="first-name" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" name="last-name" id="last-name" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="text" name="phone-number" id="phone-number" minlength="9" maxlength="9" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" name="passwor" id="password" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirm-password" id="confirm-password" required>
+                        </div>
+                        <span id="error" class="message"></span>
+                    </div>
+
+            </div>
         </div>
+        <div class="button"><button type="submit">Create Account</button>
 
-
-        <div class="form-info">
-            <span class="lets-do-this">Let's do this!</span>
-            <form action="#"></form>
-            <div class="input">
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" name="first-name" id="first-name" required>
-            </div>
-
-            <div class="input-first-name">
-                <label for="last-name">LAST NAME</label>
-                <input type="text" name="last-name" id="last-name">
-            </div>
-
-            <div class="input">
-                <label for="email">EMAIL</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-
-            <div class="input">
-                <label for="phone-number">PHONE NUMBER</label>
-                <input type="text" name="phone-number" id="phone-number" minlength="9" maxlength="9">
-            </div>
-
-            <div class="input">
-                <label for="password">PASSWORD</label>
-                <input type="password" name="passwor" id="passwor" required>
-            </div>
-
-            <div class="input">
-                <label for="confirm-password">CONFIRM PASSWORD</label>
-                <input type="password" name="confirm-password" id="confirm-password" required>
-            </div>
-        </div>
-        </div>
-        <div class="button"><button type="submit">CREATE ACCOUNT</button>
-            </form>
             <div class="log-in">
-                <p>Already have an account?</p><a href="#">Log in</a>
-            </div>
+                <p>Already have an account? <a href="#">Log in</a></p>
+                </form>
     </section>
 </body>
 
